--- a/index.css
+++ b/index.css
@@ -86,7 +86,8 @@ section {
 }
 
 .bg-image {
-  width: 480px;
+  max-width: 480px;
+  width: 100%;
   border-radius: 10px;
 }
 .home {
@@ -94,7 +95,7 @@ section {
   height: 100vh;
   width: 100%;
   background: #262626;
-  /* background-image: url(https://i.postimg.cc/WzNn3t1z/istockphoto-1294603953-612x612.jpg); */
+  background-image: url(https://i.postimg.cc/WzNn3t1z/istockphoto-1294603953-612x612.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -565,7 +566,17 @@ form textarea {
     height: auto;
     max-width: 100%;
   }
-
+  .home {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+  }
+  .bg-image {
+    /* width: 100%;
+    height: auto;
+    max-width: 300px; */
+    display: none;
+  }
   .contact {
     grid-template-columns: 1fr;
   }
