--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ section {
   height: 100vh;
   width: 100%;
   background: #262626;
-  background-image: url(https://i.postimg.cc/WzNn3t1z/istockphoto-1294603953-612x612.jpg);
+  background-image: url(https://i.postimg.cc/Kj7xHNWH/dark-background-abstract-background-network-3d-background-7680x4320-8324.png);
   background-size: cover;
   background-position: center;
   display: flex;
